update the attributes and add the requirements

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 [[:space:]]U-net/best_unet_model.keras filter=lfs diff=lfs merge=lfs -text
 pretrained_models/best_unet_model[[:space:]]7[[:space:]]channels.keras filter=lfs diff=lfs merge=lfs -text
 pretrained_models/3[[:space:]]channels/best_unet_model.keras filter=lfs diff=lfs merge=lfs -text
+flask_app/model/best_model.keras filter=lfs diff=lfs merge=lfs -text
